2005-04-10  DindinX  <dindinx@gimp.org>

	* plug-ins/common/convmatrix.c: preliminary cleanup before
	implementing a preview.

2005-04-10  Sven Neumann  <sven@gimp.org>

	* app/actions/drawable-commands.h: removed duplicate function
	declarations (spotted by Karine Delvare).

2005-04-10  Sven Neumann  <sven@gimp.org>

	Merged from gimp-2-2 branch:

	* plug-ins/print/print.c: reverted the previous change, it was wrong
	(see bug #169909).

2005-04-10  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.c
	* app/tools/gimpfliptool.c
	* app/widgets/gimpcontainertreeview.c
	* app/widgets/gimppaletteselect.c: removed unneeded base/ includes.

2005-04-09  Sven Neumann  <sven@gimp.org>

	Merged from gimp-2-2 branch:

	* menus/Makefile.am
	* tips/Makefile.am: changed the validate rules to work with srcdir
	!= builddir.

2005-04-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbuffer.[ch]: added gimp_buffer_new_from_pixbuf().

	* app/widgets/gimpclipboard.c: removed
	tile_manager_new_from_pixbuf() and base/ dependency.

2005-04-09  Manish Singh  <yosh@gimp.org>

	* app/widgets/gimppixbuf.c: #include <string.h> for strcmp, and
	fix gdk_atom_intern usage.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: quote the shell command passed to execl().
	Fixes bug #169909.

2005-04-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpnewrectselecttool.[ch]
	* app/tools/gimprectangletool.[ch]: more work on rectangle
	tool ui.
	
2005-04-09  Michael Natterer  <mitch@gimp.org>

	Implement dragging and dropping in any GdkPixbuf supported format.
	Fixes bug #172794 and bug #172795.

	* app/core/gimplayer.[ch] (gimp_layer_new_from_region): new
	function which contains all stuff that was in
	gimp_layer_new_from_tiles().

	(gimp_layer_new_from_tiles): use above function.
	(gimp_layer_new_from_pixbuf): new function.

	* app/widgets/Makefile.am
	* app/widgets/gimppixbuf.[ch]: new files containing GdkPixbuf
	utility functions for clipboard and DnD.